--- a/public/adms/css/styles_admin.css
+++ b/public/adms/css/styles_admin.css
@@ -2,6 +2,15 @@
     background-color: #2C844B;
     /* background-color: #183181; */
 }
+.bg-login {
+  background-color: #2C844B;
+  /* background-color: #183181; */
+}
+
+.bg-btn {
+  background-color: #F26222;
+  /* background-color: #183181; */
+}
 
 .sb-sidenav-five {
     /* background-color: #F9fafc; */
